--- a/article/local.bib
+++ b/article/local.bib
@@ -96,6 +96,7 @@ keywords = {Image processing, Mathematical morphology, Algorithm, Opening}
  publisher = {ACM Press},
  address = {New York, NY, USA},
  }
+
 @Article{Viola2004,
   author = 	 {Viola, P. and Jones, M.},
   title = 	 {Robust Real-Time Face Detection},
@@ -105,3 +106,16 @@ keywords = {Image processing, Mathematical morphology, Algorithm, Opening}
   number =	 2,
   pages =	 {137-154}
 }
+
+@misc{DarcsWebSite,
+  howpublished = "\url{http://www.darcs.net}"
+}
+
+@Article{WrapITK,
+   author =       {Ga\"etan Lehmann, Zachary Pincus and Benoit Regrain},
+   title =        {WrapITK - Enhanced languages support for the Insight Toolkit},
+   year =         {2006},
+   journal =      {Insight Journal},
+   month =        {January - June}
+}
+
