--- a/article/Article.tex
+++ b/article/Article.tex
@@ -557,7 +557,9 @@ many problems practical.
 \section{Acknowledgments}
 We thank Dr Pierre Adenot and MIMA2 confocal facilities
 (\url{http://mima2.jouy.inra.fr}) for providing the 3D test image.
-
+We are grateful to the INRA MIGALE bioinformatics platform
+(\url{http://migale.jouy.inra.fr}) for providing the computational resources
+used for the timing tests.
 \appendix
 
 
