specified seems more english than precised
darcs-hash:20070629191558-2fc9d-174552a8dfe214aa4cbb7da595d12bbcad56519d.gz

--- a/article/Article.tex
+++ b/article/Article.tex
@@ -399,7 +399,7 @@ All the new filters provided are wrapped using WrapITK's external projects
 
 All the execution times in this section are measured on a computer with four
 Intel\textregistered Xeon\textregistered CPU cores at 2.33GHz with 4MB cache,
-running CentOS 4.4 64 bits. Unless precised in the description, the tests are
+running CentOS 4.4 64 bits. Unless specified in the description, the tests are
 forced to run on a single core.
 
 \subsection{Morpholgy}
