add a template for the graphics
darcs-hash:20070702195110-2fc9d-680007fd7ceb06e19cb5b764d92163ce162569d6.gz

--- a/article/Article.tex
+++ b/article/Article.tex
@@ -431,6 +431,17 @@ Radius & Histogram & vanHerk/Gil-Weman & Anchor \\
 \caption{Execution times in seconds for dilation by circles using histogram, and polygon approximation based implementations applied to the $256 \times 256$ cthead image on a 1.8GHz AMD Athlon, 512KB cache. The polygon approximations use the default number of lines (a maximum of 6 when radius is greater than 8.\label{tab:perfPoly}}
 \end{table}
 
+\begin{figure}[htbp]
+\begin{center}
+\subfigure[Dilation]{\includegraphics[scale=0.62]{consolidatedMorphology-perf2D-dilation-small}}
+\subfigure[Opening]{\includegraphics[scale=0.62]{consolidatedMorphology-perf2D-opening-small}}
+\subfigure[Gradient]{\includegraphics[scale=0.62]{consolidatedMorphology-perf2D-gradient-small}}
+\subfigure[TODO]{\includegraphics[scale=0.62]{consolidatedMorphology-perf2D-gradient-small}}
+\subfigure[TODO]{\includegraphics[scale=0.62]{consolidatedMorphology-perf2D-gradient-small}}
+\subfigure[TODO]{\includegraphics[scale=0.62]{consolidatedMorphology-perf2D-gradient-small}}
+\caption{TODO}
+\end{center}
+\end{figure}
 
 \subsection{Rank and Mean filters}
 Relative times for sliding window median and mean filters and
