add a few more graphics
darcs-hash:20070702214843-2fc9d-ee884ff04584fda5be296a972d63adcbfc66a12b.gz

--- a/article/Article.tex
+++ b/article/Article.tex
@@ -436,9 +436,9 @@ Radius & Histogram & vanHerk/Gil-Weman & Anchor \\
 \subfigure[Dilation]{\includegraphics[scale=0.62]{consolidatedMorphology-perf2D-dilation-small}}
 \subfigure[Opening]{\includegraphics[scale=0.62]{consolidatedMorphology-perf2D-opening-small}}
 \subfigure[Gradient]{\includegraphics[scale=0.62]{consolidatedMorphology-perf2D-gradient-small}}
-\subfigure[TODO]{\includegraphics[scale=0.62]{consolidatedMorphology-perf2D-gradient-small}}
-\subfigure[TODO]{\includegraphics[scale=0.62]{consolidatedMorphology-perf2D-gradient-small}}
-\subfigure[TODO]{\includegraphics[scale=0.62]{consolidatedMorphology-perf2D-gradient-small}}
+\subfigure[Threads]{\includegraphics[scale=0.62]{consolidatedMorphology-perf_threads}}
+\subfigure[Number of neighbors]{\includegraphics[scale=0.62]{consolidatedMorphology-perf_nb_of_neighbors}}
+\subfigure[Image size]{\includegraphics[scale=0.62]{consolidatedMorphology-perf_image_size}}
 \caption{TODO}
 \end{center}
 \end{figure}
